--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "npm-publish",
-  "version": "0.1.0",
-  "private": true,
+  "name": "wuzi-package",
+  "version": "0.6.0",
+  "private": false,
+  "author": "wuzi",
+  "main": "./lib/common.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name common --dest lib src/install.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "npm-check": "^5.9.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +22,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
     "root": true,
